[gd_scene load_steps=47 format=3 uid="uid://c7pn6njrs51wv"]

[ext_resource type="Texture2D" uid="uid://f6s2xjgpd2qb" path="res://assets/Factions/Knights/Troops/Pawn/Blue/Pawn_Blue.png" id="1_ngh3u"]
[ext_resource type="Texture2D" uid="uid://d3cxedfgljd0l" path="res://assets/Factions/Knights/Troops/Dead/Dead.png" id="2_av04u"]
[ext_resource type="Script" path="res://src/scripts/player.gd" id="2_jbtf6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2eq4"]
size = Vector2(39, 17.75)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2in8"]
atlas = ExtResource("1_ngh3u")
region = Rect2(0, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy355"]
atlas = ExtResource("1_ngh3u")
region = Rect2(192, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl2rs"]
atlas = ExtResource("1_ngh3u")
region = Rect2(384, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqtuk"]
atlas = ExtResource("1_ngh3u")
region = Rect2(576, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr1uu"]
atlas = ExtResource("1_ngh3u")
region = Rect2(768, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3gif"]
atlas = ExtResource("1_ngh3u")
region = Rect2(960, 576, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuyit"]
atlas = ExtResource("2_av04u")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6uyq"]
atlas = ExtResource("2_av04u")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax57i"]
atlas = ExtResource("2_av04u")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yndoa"]
atlas = ExtResource("2_av04u")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogqig"]
atlas = ExtResource("2_av04u")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv71t"]
atlas = ExtResource("2_av04u")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe21o"]
atlas = ExtResource("2_av04u")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yrcc"]
atlas = ExtResource("2_av04u")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyoye"]
atlas = ExtResource("2_av04u")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_htc11"]
atlas = ExtResource("1_ngh3u")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnh27"]
atlas = ExtResource("1_ngh3u")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w4gw"]
atlas = ExtResource("1_ngh3u")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkane"]
atlas = ExtResource("1_ngh3u")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnxpq"]
atlas = ExtResource("1_ngh3u")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vqak"]
atlas = ExtResource("1_ngh3u")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nolk"]
atlas = ExtResource("1_ngh3u")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqetw"]
atlas = ExtResource("1_ngh3u")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_778ji"]
atlas = ExtResource("1_ngh3u")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3j18"]
atlas = ExtResource("1_ngh3u")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7hsa"]
atlas = ExtResource("1_ngh3u")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xq46"]
atlas = ExtResource("1_ngh3u")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkeye"]
atlas = ExtResource("1_ngh3u")
region = Rect2(0, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsloq"]
atlas = ExtResource("1_ngh3u")
region = Rect2(192, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tevsy"]
atlas = ExtResource("1_ngh3u")
region = Rect2(384, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2jc6"]
atlas = ExtResource("1_ngh3u")
region = Rect2(576, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7p5j"]
atlas = ExtResource("1_ngh3u")
region = Rect2(768, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bxi3"]
atlas = ExtResource("1_ngh3u")
region = Rect2(960, 960, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2knv"]
atlas = ExtResource("1_ngh3u")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjfp0"]
atlas = ExtResource("1_ngh3u")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnjwv"]
atlas = ExtResource("1_ngh3u")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_aut41"]
atlas = ExtResource("1_ngh3u")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2i5a"]
atlas = ExtResource("1_ngh3u")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a0yy"]
atlas = ExtResource("1_ngh3u")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_j08xy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2in8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy355")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl2rs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqtuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr1uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3gif")
}],
"loop": true,
"name": &"attacking",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuyit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6uyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax57i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yndoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogqig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv71t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe21o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yrcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyoye")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_htc11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnh27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w4gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkane")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnxpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vqak")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nolk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqetw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_778ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3j18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7hsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xq46")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkeye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsloq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tevsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2jc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7p5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bxi3")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2knv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjfp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnjwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aut41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2i5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a0yy")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_b250x"]
script/source = "extends AnimatedSprite2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="CircleShape2D" id="CircleShape2D_8sqgg"]
radius = 35.0571

[node name="player" type="CharacterBody2D"]
z_index = 4
y_sort_enabled = true
collision_layer = 3
script = ExtResource("2_jbtf6")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 4
y_sort_enabled = true
position = Vector2(0, 15)
shape = SubResource("RectangleShape2D_x2eq4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 4
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_j08xy")
animation = &"attacking"
frame_progress = 0.168826
script = SubResource("GDScript_b250x")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_8sqgg")
debug_color = Color(0.141176, 1, 0, 0.419608)

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.625

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
